chore: update ticket and issue creation in GithubService and TicketHandler