@@ -20,9 +20,9 @@ public class TicketHandler {
     public void sendTicketMessage(TextChannel channel) {
         purgeAllMessages(channel).thenRun(() -> {
             EmbedBuilder embedBuilder = new EmbedBuilder();
-            embedBuilder.setTitle("Ticket System")
+            embedBuilder.setTitle("Support System")
                     .setDescription("To create a ticket, click the button below.")
-                    .setFooter("HuraxdaxBot - I can help you here ;0", null)
+                    .setFooter("HuraxdaxBot - I can help you ;0", null)
                     .setColor(Color.GREEN);
 
             MessageEmbed messageEmbed = embedBuilder.build();
@@ -37,23 +37,51 @@ public class TicketHandler {
 
         channel.createThreadChannel("ticket-" + member.getId(), true) // true for private thread
                 .queue(threadChannel -> {
+                    threadChannel.addThreadMemberById(member.getId()).queue();
+
                     // Grant the support role access to the thread
                     Role supportRole = channel.getGuild().getRoleById(supportRoleId);
                     if (supportRole != null) {
                         List<Member> supportMembers = channel.getGuild().getMembers().stream()
                                 .filter(guildMember -> guildMember.getRoles().contains(supportRole))
-                                .collect(Collectors.toList());
+                                .toList();
 
                         for (Member supportMember : supportMembers) {
                             threadChannel.addThreadMemberById(supportMember.getId()).queue();
                         }
                     }
 
+                    // Determine the type label and color
+                    String typeLabel;
+                    Color typeColor;
+                    switch (type.toLowerCase()) {
+                        case "bug_report":
+                            typeLabel = "Bug Report";
+                            typeColor = Color.RED;
+                            break;
+                        case "feature_request":
+                            typeLabel = "Feature Request";
+                            float hue = 231f / 360f; // Convert degrees to a fraction (0.0 - 1.0)
+                            float saturation = 0.636f;
+                            float brightness = 0.949f;
+                            typeColor = Color.getHSBColor(hue, saturation, brightness);
+                            break;
+                        case "custom":
+                            typeLabel = "Custom Ticket";
+                            typeColor = Color.GRAY;
+                            break;
+                        default:
+                            typeLabel = "Unknown Type";
+                            typeColor = Color.GREEN;
+                            break;
+                    }
+
                     EmbedBuilder embedBuilder = new EmbedBuilder();
-                    embedBuilder.setTitle("Ticket Details")
-                            .addField("Created By", member.getAsMention(), false)
-                            .addField("Title", title, false)
-                            .addField("Description", description, false);
+                    embedBuilder.setTitle(title)
+                            .setAuthor(member.getUser().getAsTag(), null, member.getUser().getEffectiveAvatarUrl())
+                            .addField("Type", typeLabel, true)
+                            .addField("Description", description, false)
+                            .addBlankField(false);
 
                     // Only add Additional Info field if there is additional info provided
                     if (additionalInfo.length > 0 && !additionalInfo[0].isEmpty()) {
@@ -61,38 +89,20 @@ public class TicketHandler {
                         for (String info : additionalInfo) {
                             additionalInfoBuilder.append(info).append("\n");
                         }
-                        embedBuilder.addField("Additional Info", additionalInfoBuilder.toString(), false);
+                        embedBuilder.addField("Additional Info", additionalInfoBuilder.toString(), false)
+                                .addBlankField(false);
                     } else {
                         embedBuilder.addField("Additional Info", "None", false);
                     }
 
-                    // Set the color based on the ticket type
-                    switch (type.toLowerCase()) {
-                        case "bug_report":
-                            embedBuilder.setColor(Color.RED);
-                            break;
-                        case "feature_request":
-                            float hue = 231f / 360f; // Convert degrees to a fraction (0.0 - 1.0)
-                            float saturation = 0.636f;
-                            float brightness = 0.949f;
-                            Color discordPrimaryColor = Color.getHSBColor(hue, saturation, brightness);
-                            embedBuilder.setColor(discordPrimaryColor);
-                            break;
-                        case "custom":
-                            embedBuilder.setColor(Color.GRAY);
-                            break;
-                        default:
-                            embedBuilder.setColor(Color.GREEN);
-                            break;
-                    }
-
-                    embedBuilder.setDescription("Please wait for a support member to assist you.")
+                    embedBuilder.setColor(typeColor)
+                            .setDescription("Support will assist you shortly. In addition, feel free to provide any extra information or further details in the chat if it is not covered in the description.")
                             .setFooter("To close this ticket, click the button below.", null);
 
                     MessageEmbed messageEmbed = embedBuilder.build();
 
                     threadChannel.sendMessageEmbeds(messageEmbed)
-                            .addActionRow(Button.danger("close_ticket", "Close Ticket").withEmoji(net.dv8tion.jda.api.entities.emoji.Emoji.fromUnicode("❌")))
+                            .addActionRow(Button.danger("close_ticket", "\uD83D\uDD12 Close Ticket"))
                             .queue();
                 });
     }
